# local-llm-pdf-ocr

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  SCRIBE_HANDOVER.md  install.bat  install.ps1  pyproject.toml  start_app.vbs  stop_app.bat
.github/workflows/: release.yml  test.yml
.jules/: bolt.md
scripts/: build_fixture.py  confidence_eval.py  confidence_image.py  debug_alignment.py  debug_detection_only.py  debug_image_input.py  debug_llm_raw.py  fixture_from_output.py  ingest_lexicon.py  inspect_grounded_lines.py  inspect_pdf.py  test_check.py  verify_output.py  visualize_bboxes.py  visualize_comparison.py
src/local_deepl/: __init__.py  cli.py  evaluation.py  pipeline.py  server.py
src/local_deepl/api/: celery_app.py  tasks.py
src/local_deepl/api/routers/: ai.py  artifacts.py  common.py  config.py  extraction.py  jobs.py  ocr.py  state.py  translation.py  websocket.py
src/local_deepl/api/schemas/: __init__.py  requests.py
src/local_deepl/api/services/: ai.py  artifacts.py  document_exports.py  document_metadata.py  jobs.py  progress.py
src/local_deepl/core/: __init__.py  aligner.py  document.py  evaluation.py  grounded.py  ocr.py  pdf.py  postprocess.py  preprocessing.py  processors.py  translation.py  translation_config.py
src/local_deepl/core/workflows/: __init__.py  base.py  grounded.py  hybrid.py
src/local_deepl/static/: index.html
src/local_deepl/static/css/: layout.css
src/local_deepl/static/js/: app.js  state_and_api.js  workspace_ui.js
src/local_deepl/utils/: __init__.py  image.py  tqdm_patch.py
src/pdf_ocr/: __init__.py  cli.py  evaluation.py  pipeline.py  server.py
src/pdf_ocr/api/: celery_app.py  tasks.py
src/pdf_ocr/api/routers/: ai.py  config.py  ocr.py  websocket.py
src/pdf_ocr/api/schemas/: __init__.py  requests.py
src/pdf_ocr/api/services/: __init__.py  ai.py  jobs.py  security.py
src/pdf_ocr/core/: __init__.py  aligner.py  grounded.py  ocr.py  pdf.py  postprocess.py  translation.py
src/pdf_ocr/static/: index.html  style.css
src/pdf_ocr/static/css/: components.css  layout.css  modals.css  variables.css  workspace.css
src/pdf_ocr/static/js/: app.js  state_and_api.js  workspace_ui.js
src/pdf_ocr/utils/: __init__.py  image.py  litellm_provider.py  security.py  tqdm_patch.py
tests/: conftest.py  test_ai_router.py  test_ai_services.py  test_aligner.py  test_api_safety.py  test_artifact_store.py  test_dictionary_postprocess.py  test_document.py  test_document_processor_selection.py  test_docx_writer.py  test_embedding_position.py  test_evaluation.py  test_grounded.py  test_image.py  test_integration.py  test_jobs_progress_services.py  test_ocr.py  test_pdf.py  test_pipeline.py  test_security_qa.py  test_server_lazy_imports.py  test_translation_boundary.py
tests/fixtures/: ground_truth_dense.json  ground_truth_digital.json  ground_truth_handwritten.json  ground_truth_hybrid.json  ground_truth_image.json  ground_truth_notes.json
